[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/font_12.tres" type="DynamicFont" id=1]
[ext_resource path="res://battle/battle.gd" type="Script" id=2]
[ext_resource path="res://ui/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://battle/familiars/sphynx.png" type="Texture" id=4]
[ext_resource path="res://ui/battle_menus/battle_actions.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/battle_menus/move_select.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/battle_menus/move_info.tscn" type="PackedScene" id=8]

[node name="battle" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="witch" type="ColorRect" parent="."]
margin_left = 18.0
margin_top = 216.0
margin_right = 78.0
margin_bottom = 344.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_sprites" type="Control" parent="."]
margin_left = 216.0
margin_right = 256.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Sprite" parent="enemy_sprites"]
position = Vector2( 64, 58 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="2" type="Sprite" parent="enemy_sprites"]
position = Vector2( 166, 58 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="3" type="Sprite" parent="enemy_sprites"]
position = Vector2( 260, 58 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="4" type="Sprite" parent="enemy_sprites"]
position = Vector2( 356, 58 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="player_sprites" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Sprite" parent="player_sprites"]
position = Vector2( 184, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="2" type="Sprite" parent="player_sprites"]
position = Vector2( 348, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="player_labels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="player_labels"]
margin_left = 100.0
margin_top = 320.0
margin_right = 260.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "FRIEND STS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="player_labels/1"]
margin_top = 16.0
margin_right = 176.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP 100 MP 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="player_labels"]
margin_left = 282.0
margin_top = 320.0
margin_right = 442.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "FRIEND STS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="player_labels/2"]
margin_top = 16.0
margin_right = 176.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "HP 100 MP 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_labels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="enemy_labels"]
visible = false
margin_left = 240.0
margin_top = 116.0
margin_right = 320.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="enemy_labels"]
visible = false
margin_left = 344.0
margin_top = 116.0
margin_right = 424.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="enemy_labels"]
visible = false
margin_left = 436.0
margin_top = 116.0
margin_right = 516.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="enemy_labels"]
visible = false
margin_left = 532.0
margin_top = 116.0
margin_right = 612.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "HP 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui" type="CanvasLayer" parent="."]

[node name="battle_actions" parent="ui" instance=ExtResource( 6 )]
visible = false

[node name="move_select" parent="ui" instance=ExtResource( 7 )]
visible = false

[node name="move_info" parent="ui" instance=ExtResource( 8 )]
visible = false

[node name="timer" type="Timer" parent="."]
one_shot = true

[node name="tween" type="Tween" parent="."]
